--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,18 @@
 .vscode/launch.json
 .vscode/ipch
 lib/
+
+# Secrets should stay secret
 src/secrets.h
-extra/TSIPMON/Thunderbolt/
+
+# Don't add big files to the REPO
+.tmp/
+extra/avrlib/
+extra/heather/
+extra/NEMA/
+extra/THUNDERBOLT/
+extra/TSIPMON/
+
 
 # macOS breadcrumbs
 .DS_Store
