--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,8 @@
 
 [platformio]
 default_envs = wemos_d1_mini32
+build_dir = ~/Library/Caches/PlatformIO/GPSDO/build
+libdeps_dir = ~/Library/Caches/PlatformIO/GPSDO/libdeps
 
 [env]
 lib_deps =
