Add scripts folder and move secrets headers

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,7 @@
 
 [platformio]
 default_envs = wemos_d1_mini32
-build_dir = ~/Library/Caches/PlatformIO/GPSDO/build
-libdeps_dir = ~/Library/Caches/PlatformIO/GPSDO/libdeps
+extra_scripts = pre:scripts/pio_paths.py
 
 [env]
 lib_deps =
